Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp
@@ -1046,7 +1046,7 @@ void MediaPlayerPrivateRemote::setCDM(LegacyCDM* cdm)
     if (!cdm)
         return;
 
-    auto remoteCDM = m_manager.gpuProcessConnection().legacyCDMFactory().findCDM(cdm->cdmPrivate());
+    auto remoteCDM = WebProcess::singleton().legacyCDMFactory().findCDM(cdm->cdmPrivate());
     if (!remoteCDM)
         return;
 
